--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "big.js": "^6.1.1",
     "font-awesome": "^4.7.0",
     "prop-types": "^15.8.1",
+    "radium": "^0.26.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
